export enum EDataSourceType {
    EXCEL = 'excel',
    CSV = 'csv',
    PDF = 'pdf',
    POSTGRESQL = 'postgresql',
    MYSQL = 'mysql',
    MARIADB = 'mariadb',
    MONGODB = 'mongodb',
}