export enum EPublishStatus {
    PUBLISHED = 'published',
    DRAFT = 'draft',
}