export enum EUserType {
    ADMIN = 'admin',
    NORMAL = 'normal',
}