@startuml Backend_Models_Class_Diagram
!theme aws-orange
title Data Research Analysis Platform - Backend Models

' Define styling
skinparam class {
    BackgroundColor LightBlue
    BorderColor DarkBlue
    ArrowColor DarkBlue
}
skinparam package {
    BackgroundColor LightGray
    BorderColor Gray
}

package "Core Entities" {
    class DRAUser {
        +id: number
        +email: string
        +created_at: Date
    }

    class DRAUsersPlatform {
        +id: number
        +email: string
        +first_name: string
        +last_name: string
        +password: string
        +user_type: EUserType
        +email_verified_at: Date
        +unsubscribe_from_emails_at: Date
        --
        +projects: DRAProject[]
        +data_sources: DRADataSource[]
        +data_models: DRADataModel[]
        +verification_codes: DRAVerificationCode[]
        +dashboards: DRADashboard[]
        +articles: DRAArticle[]
        +categories: DRACategory[]
    }

    class DRAVerificationCode {
        +id: number
        +code: string
        +expired_at: Date
        --
        +users_platform: DRAUsersPlatform
    }
}

package "Project Management" {
    class DRAProject {
        +id: number
        +name: string
        +description: string
        +created_at: Date
        --
        +users_platform: DRAUsersPlatform
        +data_sources: DRADataSource[] {cascade: remove, update}
        +dashboards: DRADashboard[] {cascade: remove, update}
    }
}

package "Data Layer" {
    class DRADataSource {
        +id: number
        +name: string
        +data_type: EDataSourceType
        +connection_details: IDBConnectionDetails <<encrypted>>
        +created_at: Date
        --
        +users_platform: DRAUsersPlatform
        +project: DRAProject {onDelete: CASCADE}
        +data_models: DRADataModel[] {cascade: remove, update}
    }

    class DRADataModel {
        +id: number
        +schema: string
        +name: string
        +sql_query: string
        +query: JSON
        --
        +users_platform: DRAUsersPlatform
        +data_source: DRADataSource {onDelete: CASCADE}
    }
}

package "Dashboard & Visualization" {
    class DRADashboard {
        +id: number
        +data: IDashboardDataStructure (JSONB)
        --
        +users_platform: DRAUsersPlatform
        +project: DRAProject {onDelete: CASCADE}
        +export_meta_data: DRADashboardExportMetaData[] {cascade: remove, update}
    }

    class DRADashboardExportMetaData {
        +id: number
        +dashboard_id: number
        +file_name: string
        +file_path: string
        +file_size: number
        +created_at: Date
        --
        +dashboard: DRADashboard {onDelete: CASCADE}
    }
}

package "Content Management" {
    class DRAArticle {
        +id: number
        +title: string
        +content: string
        +content_markdown?: string
        +publish_status: EPublishStatus
        +slug: string
        +created_at: Date
        --
        +users_platform: DRAUsersPlatform {onDelete: CASCADE}
        +dra_articles_categories: DRAArticleCategory[]
    }

    class DRACategory {
        +id: number
        +title: string
        --
        +users_platform: DRAUsersPlatform {onDelete: CASCADE}
        +dra_articles_categories: DRAArticleCategory[]
    }

    class DRAArticleCategory {
        +id: number
        +article_id: number
        +category_id: number
        --
        +article: DRAArticle
        +category: DRACategory
        +users_platform: DRAUsersPlatform
    }
    
    enum EPublishStatus {
        PUBLISHED
        DRAFT
    }
}

package "Enums & Types" {
    enum EUserType {
        ADMIN
        NORMAL
    }

    enum EDataSourceType {
        POSTGRESQL
        MYSQL
        MARIADB
        MONGODB
        CSV
        EXCEL
        PDF
    }

    interface IDBConnectionDetails {
        host?: string
        port?: number
        database?: string
        username?: string
        password?: string
        file_path?: string
    }
}

' Relationships
DRAUsersPlatform ||--o{ DRAProject : "owns"
DRAUsersPlatform ||--o{ DRADataSource : "creates"
DRAUsersPlatform ||--o{ DRADataModel : "builds"
DRAUsersPlatform ||--o{ DRAVerificationCode : "has"
DRAUsersPlatform ||--o{ DRADashboard : "creates"
DRAUsersPlatform ||--o{ DRAArticle : "authors"
DRAUsersPlatform ||--o{ DRACategory : "manages"

DRAProject ||--o{ DRADataSource : "contains"
DRAProject ||--o{ DRADashboard : "includes"

DRADataSource ||--o{ DRADataModel : "generates"
DRADataSource }o--|| EDataSourceType : "typed as"
DRADataSource }o--|| IDBConnectionDetails : "configured with"

DRADashboard ||--o| DRADashboardExportMetaData : "exports to"

DRAArticle }o--o{ DRACategory : "categorized by"
DRAArticleCategory }|--|| DRAArticle : "links"
DRAArticleCategory }|--|| DRACategory : "links"

DRAUsersPlatform }o--|| EUserType : "classified as"
DRAArticle }o--|| EPublishStatus : "status"

note right of DRADataSource : Supports multiple data source types\nincluding databases, files, and PDFs\n\n**Encryption:**\nconnection_details uses ValueTransformer\nfor automatic encryption/decryption\nSupports legacy unencrypted data

note right of DRADashboard : Stores visualization data\nas JSONB configuration\nSupports chart definitions and layouts

note right of DRAUsersPlatform : Central user entity with\nrelationships to all major entities\n\n**Cascade Deletion:**\nDeleting user cascades to all owned entities

note left of DRAProject : **Cascade Behavior:**\nDeleting project cascades to:\n- All data sources (with cascade: remove)\n- All dashboards (with cascade: remove)\n- Data models via data source cascade\n- Physical tables dropped via processor

note right of DRAArticle : **Content Management:**\nSupports both HTML and Markdown\nSlug auto-generated from title\nPublish status controls visibility

@enduml